Fix broken styles

--- a/styles/soft-wrap-indicator.less
+++ b/styles/soft-wrap-indicator.less
@@ -3,7 +3,7 @@
 .soft-wrap-status-component {
   color: @text-color;
 
-  .status-lit {
+  .lit {
     color: @text-color-highlight;
     text-shadow: 0px 0px @font-size fade(@text-color-highlight, 90%);
   }
